stop body overflow on desktop

--- a/styles/sass/styles.sass
+++ b/styles/sass/styles.sass
@@ -60,6 +60,11 @@ $transition: all .1s linear
 		padding-left: 50px
 		padding-top: 40px
 
+body
+	height: 100vh
+	width: 100vh
+	overflow: hidden
+
 #background
 	background-color: $whitesmoke
 	height: 105vh
